2008-02-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script-parser.c:
	(clutter_script_get_type_from_symbol),
	(clutter_script_get_type_from_class): Use BIND_LAZY flag
	when looking at the symbols, so we don't load them all up.

	* clutter/clutter-script.c (resolve_alpha_func): Ditto as above.

2008-02-07  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-actor.c:
	(_clutter_actor_apply_modelview_transform): perform translation as
	well as anchor point adjustment based on self not being stage (and
	not by self not being an orphan).

2008-02-07  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-stage.c:
	* clutter/clutter-stage.h:
	* clutter/eglnative/clutter-stage-egl.c:
	* clutter/eglx/clutter-stage-egl.c:
	* clutter/osx/clutter-stage-osx.c:
	* clutter/sdl/clutter-stage-sdl.c:
	* clutter/x11/clutter-stage-x11.c:
        Add at least somne basic offscreen handling into all backends.
        Remove unused clutter_stage_set_offscreen vfunc. (#549)

	* clutter/clutter-texture.c:
        Minor API doc tweak, noting rowstride source in set_area

2008-02-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-score.c (traverse_children): Actually implement
	clutter_score_list_timelines().

	* tests/test-score.c (main): Test clutter_score_list_timelines().

2008-02-07  Matthew Allum  <mallum@openedhand.com>

	* clutter/pango/pangoclutter-render.c:
	Warn if requested glyph is too big for underlying texture cache.
	(see #666)

2008-02-07  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c: (texture_upload_data):
	Remove random appearing 'priv->filter_quality =1' (#643)

2008-02-06  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c:
	Minor clean up from last commit. 

	* tests/test-fbo.c:
	Small tweak (rotate offscreen, rather than resize)

2008-02-06  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c:
	Initial attempt at handling resizing/tranformed source textures.
